# observed_control

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.sh
docs/: conf.py  index.rst
docs/_automodules/: conditions.rst  core.rst  examples.rst  modules.rst  systems.rst
examples/: cart_pole_plotting.py  cart_pole_swing_up.py  cart_pole_swing_up_iterated.py  cart_pole_swing_up_unscented.py  msd_control_simulation.py  msd_control_simulation_unscented.py
src/conditions/: quadratic_cost.py
src/core/: anticipated_condition.py  dynamic_system.py  iterated_observed_control.py  observed_control.py  unscented_observed_control.py
src/systems/: cart_pole_system.py  linear_system.py
tests/: test_anticipated_condition.py  test_cart_pole_system.py  test_dynamic_system.py  test_linear_system.py  test_observed_control.py  test_quadratic_cost.py
