# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "observed_control"
version = "0.1.0"
authors = [
  { name="Andrew Petruska", email="ajpetruska@gmail.com" },
]
description = "A project that implements Observed Control for solving nonlinear model predictive control problems."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "autograd",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "matplotlib",
]

# This section tells the build system to look inside the 'src' directory
# to find all your packages.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
